Restyle CSS + finishing checkout.js (modal)

--- a/css/styles.css
+++ b/css/styles.css
@@ -2855,8 +2855,6 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
 }
 
-
-
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
   padding-right: calc(1.5em + 0.75rem);
   background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem);
@@ -4609,7 +4607,9 @@ textarea.form-control-lg {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: 100%;
+  width: 86%;
+  padding-top: 25%;
+  margin: 0 auto;
 }
 
 .card-img,
